[Issue:#2553]: store offline log completely, enable multiple iamges (fix #2553)

--- a/main/res/layout/imageselect_activity.xml
+++ b/main/res/layout/imageselect_activity.xml
@@ -100,6 +100,13 @@
                 android:layout_width="0dip"
                 android:layout_weight="1"
                 android:text="@android:string/ok" />
+
+            <Button
+                android:id="@+id/delete"
+                style="@style/button_full"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:text="@string/log_image_delete" />
         </LinearLayout>
     </LinearLayout>
 
