--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -9,6 +9,7 @@
 <li>New: Map downloader for OpenStreetMap offline maps (see map selector menu and settings - map)</li>
 <li>New: Open local .map files in c:geo by tapping on them</li>
 <li>New: Colorpicker for map lines offers \"default\" button</li>
+<li>New: OpenstreetMap offline maps support \"default\" language</li>
 </ul>
 
 <h4>Map: Individual routes:</h4>
@@ -23,7 +24,8 @@
 <ul>
 <li>New: Option added to center on track</li>
 <li>New: Show Warning before overwriting an existing track</li>
-<li>New: Show warning on \"load track\" if an empty track file or a GPX file containing a route was selected</li>
+<li>New: Show warning on \"load track\" if an empty track file was selected</li>
+<li>New: Also load GPX files using the route format</li>
 <li>Change: Group \"individual track\" related entries into its own sub menu</li>
 </ul>
 
@@ -31,8 +33,9 @@
 <ul>
 <li>Changed sync logic for personal notes in caches to avoid duplication of personal notes</li>
 <li>New: Personal note editor will grow automatically for longer texts</li>
-<li>Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
-<li>Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
+<li>New: Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
+<li>New: Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
+<li>Fix: Remembers waypoint coordinate format while scrolling in list</li>
 </ul>
 
 <h4>Cache lists:</h4>
@@ -44,7 +47,7 @@
 
 <h4>Other:</h4>
 <ul>
-<li>New: Include offline find counter on homescreen</li>
+<li>New: Include offline find counter on homescreen (configurable)</li>
 <li>New: Individual route sort view: Tap on item to open cache details</li>
 <li>Change: Set colorAccent to c:geo orange in many more places</li>
 <li>Fix: Use 24 hour time formatter for logfile and export files for individual routes and history track</li>
