--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -536,7 +536,14 @@
             android:key="@string/pref_excludearchived"
             android:summary="@string/init_summary_archived"
             android:title="@string/init_archived" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_global_wp_extraction_disable"
+            android:title="@string/init_global_wp_extraction_disable"
+            android:summary="@string/init_summary_global_wp_extraction_disable" />
+
     </PreferenceScreen>
+
 
     <PreferenceScreen
         android:icon="?attr/settings_map"
