--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -26,11 +26,11 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <h4>Map: GPX tracks/routes:</h4>
 <ul>
 <li>Change: Renamed \"individual track\" to \"GPX track/route\"</li>
+<li>New: Also load GPX files using the route format</li>
 <li>New: Option added to center on track/route</li>
 <li>New: Show Warning before overwriting an existing track/route</li>
 <li>New: Show warning on \"load track/route\" if an empty track/route file was selected</li>
-<li>New: Also load GPX files using the route format</li>
-<li>Change: Group \"individual track/route\" related entries into its own sub menu</li>
+<li>Change: Group \"GPX track/route\" related entries into its own sub menu</li>
 </ul>
 
 <h4>Cache details:</h4>
