--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -36,6 +36,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <h4>Cache details:</h4>
 <ul>
 <li>Changed sync logic for personal notes in caches to avoid duplication of personal notes</li>
+<li>New: Option to globally deactive waypoint extraction from personal notes</li>
 <li>New: Personal note editor will grow automatically for longer texts</li>
 <li>New: Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
 <li>New: Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
@@ -44,6 +45,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 
 <h4>Cache lists:</h4>
 <ul>
+<li>Fix: GPX export - label for checkbox \"Include found status\"</li>
 <li>Change: \"New list\" entry moved to top of list creation/selection dialog</li>
 <li>Change: A newly created list for user-defined caches will now be named \"User-defined caches\" instead of \"Internal caches\" (does not change an existing list with user-defined caches)</li>
 <li>New: Offer logging of premium caches from search for basic members of geocaching.com</li>
@@ -54,6 +56,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>New: Include offline found counter on homescreen (configurable)</li>
 <li>New: Individual route sort view: Tap on item to open cache details</li>
 <li>New: Updated send2cgeo and GPS Status helper app icons</li>
+<li>New: Add status info on BRouter availability to about - system screen</li>
 <li>Change: Set colorAccent to c:geo orange in many more places</li>
 <li>Fix: Use 24 hour time formatter for logfile and export files for individual routes and history track</li>
 <li>Many other small fixes</li>
