Support drag & drop for route sort view

--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -107,6 +107,7 @@
     · <a href="http://rrze-icon-set.berlios.de/index.html">RRZE Icon set</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a>)\n
     · <a href="https://iconfindr.com/1mNr3rl">Layers icon by Cole Bemis</a> (<a href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>)\n
     · <a href="https://material.io/tools/icons/">Google Material Design Icons</a> (<a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache license version 2.0</a>)\n
+    · <a href="https://github.com/bauerca/drag-sort-listview/">DragSortListView library by Carl Bauer</a> (<a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache license version 2.0</a>)\n
     · <a href="https://www.mapquest.com/">Geocoding courtesy of MapQuest</a>\n
     · <a href="https://www.openstreetmap.org/">Geocoding data from OpenStreetMap</a>\n
     · The <a href="http://tango.freedesktop.org/Tango_Desktop_Project">Tango! Desktop Project</a> (Public Domain)\n
