--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -21,6 +21,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>New: Import route from GPX route file</li>
 <li>New: Option added to center on route</li>
 <li>New: Show warning before clearing a route</li>
+<li>Fix: Crash on loading empty route item</li>
 </ul>
 
 <h4>Map: GPX tracks/routes:</h4>
@@ -38,6 +39,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>Changed sync logic for personal notes in caches to avoid duplication of personal notes</li>
 <li>New: Option to globally deactivate waypoint extraction from personal notes</li>
 <li>New: Personal note editor will grow automatically for longer texts</li>
+<li>New: Personal note editor: Directly activate keyboard on opening</li>
 <li>New: Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
 <li>New: Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
 <li>Fix: Remembers waypoint coordinate format while scrolling in list</li>
@@ -55,6 +57,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <ul>
 <li>New: Include offline found counter on homescreen (configurable)</li>
 <li>New: Individual route sort view: Tap on item to open cache details</li>
+<li>New: Individual route sort view: Reorder using drag & drop</li>
 <li>New: Updated send2cgeo and GPS Status helper app icons</li>
 <li>New: Add status info on BRouter availability to about - system screen</li>
 <li>Change: Set colorAccent to c:geo orange in many more places</li>
