--- a/main/res/layout-land/compass_activity.xml
+++ b/main/res/layout-land/compass_activity.xml
@@ -49,6 +49,71 @@
             android:textOn="@string/use_compass"
             android:textOff="@string/use_gps" />
 
+        <ToggleButton
+            android:id="@+id/device_orientation_mode"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_below="@+id/use_compass"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:textOn="@null"
+            android:textOff="@null" />
+
+
+         <RelativeLayout
+            android:id="@+id/device_information"
+            android:layout_width="fill_parent"
+            android:layout_height="16dip"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_below="@+id/device_orientation_mode"
+            android:longClickable="false" >
+
+                 <TextView
+                     android:id="@+id/device_heading_label"
+                     style="@style/location_current_style"
+                     android:layout_alignParentLeft="true"
+                     android:textColor="?text_color_grey"
+                     android:text="@string/device_heading_label"/>
+
+                 <TextView
+                     android:id="@+id/device_heading"
+                     style="@style/single_degree_style"
+                     android:width="36dip"
+                     android:layout_toRightOf="@+id/device_heading_label"/>
+
+                 <TextView
+                     android:id="@+id/device_orientation_roll"
+                     style="@style/single_degree_style"
+                     android:width="28dip"
+                     android:layout_alignParentRight="true"
+                     />
+                 <TextView
+                     android:id="@+id/device_orientation_pitch"
+                     style="@style/single_degree_style"
+                     android:width="36dip"
+                     android:layout_toLeftOf="@+id/device_orientation_roll"
+                     />
+                 <TextView
+                     android:id="@+id/device_orientation_azimuth"
+                     style="@style/single_degree_style"
+                     android:width="36dip"
+                     android:layout_toLeftOf="@+id/device_orientation_pitch"
+                     />
+                 <TextView
+                     android:id="@+id/device_orientation_label"
+                     style="@style/location_current_style"
+                     android:layout_toLeftOf="@+id/device_orientation_azimuth"
+                     android:textColor="?text_color_grey"
+                     android:text="@string/device_orientation_label"
+                     />
+             </RelativeLayout>
+
+
         <TextView
             android:id="@+id/heading"
             android:layout_width="wrap_content"
@@ -57,6 +122,7 @@
             android:layout_centerVertical="true"
             android:layout_gravity="left"
             android:layout_marginLeft="3dip"
+            android:layout_below="@+id/device_information"
             android:text="@null"
             android:textColor="?text_color"
             android:textSize="26sp" />
@@ -69,6 +135,7 @@
             android:layout_centerVertical="true"
             android:layout_gravity="right"
             android:layout_marginRight="3dip"
+            android:layout_below="@+id/device_information"
             android:text="@null"
             android:textColor="?text_color"
             android:textSize="26sp" />
