add Chirp Wolf icon to cache detail page for chirp caches (fix #8883)

--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -189,6 +189,9 @@
     <string translatable="false" name="cgeo_queryMapFile_resultParam">mapfile</string>
     <string translatable="false" name="cgeo_queryMapFile_actionParam">forceAndFeedback</string>
 
+    <!-- Chirp Wolf play store id -->
+    <string translatable="false" name="chirpwolf_package">de.wolffire.chirpwolf</string>
+
     <!-- map server urls -->
     <string translatable="false" name="mapserver_osm_v5">https://ftp-stud.hs-esslingen.de/pub/Mirrors/download.mapsforge.org/maps/v5/</string>
 </resources>
