--- a/main/res/layout/cachedetail_details_page.xml
+++ b/main/res/layout/cachedetail_details_page.xml
@@ -253,6 +253,52 @@
             </RelativeLayout>
         </LinearLayout>
 
+        <!-- Chirp box -->
+
+        <LinearLayout
+            android:id="@+id/chirp_box"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <View
+                style="@style/separator_horizontal"
+                android:layout_marginBottom="9dp"
+                android:layout_marginTop="9dp" />
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/chirp_text"
+                    android:text="@string/cache_chirpwolf_start"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="6dip"
+                    android:layout_marginRight="60dip"
+                    android:paddingRight="3dip"
+                    android:textColor="?text_color"
+                    android:textSize="14sp"
+                    tools:text="Start Chirp Wolf"
+                    android:textIsSelectable="false" />
+
+                <ImageButton
+                    android:id="@+id/send_to_chirp"
+                    style="@style/button_small"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="40dip"
+                    android:layout_height="40dip"
+                    android:src="@drawable/icon_gc_chirpwolf"
+                    android:visibility="visible"
+                    tools:visibility="visible"/>
+            </RelativeLayout>
+        </LinearLayout>
+
         <!-- Favorite points box -->
 
         <LinearLayout
