--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -1,82 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <!-- changelog for the master branch -->
-  <string name="changelog_master" translatable="false"><Data><![CDATA[<div>
-<h1>Developer version:</h1>
-
-<h4>Android 11 notice:</h4>
-Android 11 enforces a new way for storing data, which c:geo does not support yet. If you switch your system to Android 11, c:geo will not be able to access part of its data. This will most likely disable storing offline maps, importing/exporting data as well as backing up/restoring c:geo\'s database. Other effects may occur. We recommend to not upgrade to Android 11 for the time being.
-
-<h4>Map:</h4>
-<ul>
-<li>New: Map downloader for OpenStreetMap offline maps (see map selector menu and settings - map)</li>
-<li>New: Open local .map files in c:geo by tapping on them</li>
-<li>New: Colorpicker for map lines offers \"default\" button</li>
-<li>New: OpenstreetMap offline maps support \"default\" language</li>
-<li>Change: Moved \"History track enable/disable\" checkbox to \"History track\" submenu as \"show\" / \"hide\" entries</li>
-</ul>
-
-<h4>Map: Individual routes:</h4>
-<ul>
-<li>New: Export route as GPX route file</li>
-<li>New: Import route from GPX route file</li>
-<li>New: Option added to center on route</li>
-<li>New: Show warning before clearing a route</li>
-<li>Fix: Crash on loading empty route item</li>
-<li>Fix: Distance info still being displayed after clearing a route</li>
-</ul>
-
-<h4>Map: GPX tracks/routes:</h4>
-<ul>
-<li>Change: Renamed \"individual track\" to \"GPX track/route\"</li>
-<li>New: Also load GPX files using the route format</li>
-<li>New: Option added to center on track/route</li>
-<li>New: Show Warning before overwriting an existing track/route</li>
-<li>New: Show warning on \"load track/route\" if an empty track/route file was selected</li>
-<li>Change: Group \"GPX track/route\" related entries into its own sub menu</li>
-</ul>
-
-<h4>Cache details:</h4>
-<ul>
-<li>Changed sync logic for personal notes in caches to avoid duplication of personal notes</li>
-<li>New: Option to globally deactivate waypoint extraction from personal notes</li>
-<li>New: Personal note editor will grow automatically for longer texts</li>
-<li>New: Personal note editor: Directly activate keyboard on opening</li>
-<li>New: Personal note editor: Activate edit by tapping on text</li>
-<li>New: Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
-<li>New: Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
-<li>Fix: Remembers waypoint coordinate format while scrolling in list</li>
-<li>New: Offer Chirp Wolf app for chirp caches</li>
-</ul>
-
-<h4>Cache lists:</h4>
-<ul>
-<li>Fix: GPX export - label for checkbox \"Include found status\"</li>
-<li>Change: \"New list\" entry moved to top of list creation/selection dialog</li>
-<li>Change: A newly created list for user-defined caches will now be named \"User-defined caches\" instead of \"Internal caches\" (does not change an existing list with user-defined caches)</li>
-<li>New: Offer logging of premium caches from search for basic members of geocaching.com</li>
-</ul>
-
-<h4>Other:</h4>
-<ul>
-<li>New: Include offline found counter on homescreen (configurable)</li>
-<li>New: Individual route sort view: Tap on item to open cache details</li>
-<li>New: Individual route sort view: Reorder using drag & drop</li>
-<li>New: Display an error message (instead of crashing) when trying to restore an incompatible database version</li>
-<li>New: Updated send2cgeo and GPS Status helper app icons</li>
-<li>New: Add status info on BRouter availability to about - system screen</li>
-<li>New: Added Chirp Wolf in useful apps list</li>
-<li>Fix: Trackable links openened from within some mail programs would not open</li>
-<li>Change: Set colorAccent to c:geo orange in many more places</li>
-<li>Fix: Use 24 hour time formatter for logfile and export files for individual routes and history track</li>
-<li>Many other small fixes</li>
-<li>Logging: Added more info levels to logfile</li>
-<li>Logging: Added option to write extended logfile with even more info</li>
-<li>Logging: Read log settings from \"logfiles/log.properties\" (if present)</li>
-<li>Internal: Updated contributor\'s list</li>
-<li>Internal: Added extension table to database</li>
-<li>Internal: Fixed some issues with database structure</li>
-</ul>
-</div>]]></Data>
+  <string name="changelog_master" translatable="false">
   </string>
 </resources>
