--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -45,6 +45,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>New: Personal note editor: Activate edit by tapping on text</li>
 <li>New: Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
 <li>New: Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
+<li>New: Online-only found count variable added: [ONLINENUM]</li>
 <li>Fix: Remembers waypoint coordinate format while scrolling in list</li>
 <li>New: Offer Chirp Wolf app for chirp caches</li>
 </ul>
