--- a/main/res/layout/cacheslist_item.xml
+++ b/main/res/layout/cacheslist_item.xml
@@ -36,45 +36,45 @@
         android:visibility="visible"
         tools:visibility="visible"/>
 
-    <!-- cache name and icon -->
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginRight="110dip"
-        android:layout_toRightOf="@+id/log_status_mark"
-        android:ellipsize="end"
-        android:lines="1"
-        android:paddingRight="3dip"
-        android:paddingTop="5dip"
-        android:scrollHorizontally="true"
-        android:textColor="?text_color"
-        android:textIsSelectable="false"
-        android:textSize="18sp"
-        tools:text="name"
-        android:maxLines="1" />
-
-    <!-- cache attributes and other info -->
-
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="left"
-        android:layout_marginRight="110dip"
-        android:layout_marginTop="30dip"
         android:layout_toRightOf="@id/log_status_mark"
-        android:ellipsize="end"
-        android:paddingBottom="5dip"
-        android:paddingRight="3dip"
-        android:scrollHorizontally="true"
-        android:textColor="?text_color_grey"
-        android:textIsSelectable="false"
-        android:textSize="12sp"
-        tools:text="terrain, difficulty and others" />
+        android:layout_marginRight="110dip"
+        android:orientation="vertical">
+
+        <!-- cache name and icon -->
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:paddingRight="3dip"
+            android:paddingTop="5dip"
+            android:scrollHorizontally="true"
+            android:textColor="?text_color"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+            tools:text="name" />
+
+        <!-- cache attributes and other info -->
+
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:ellipsize="end"
+            android:paddingBottom="5dip"
+            android:paddingRight="3dip"
+            android:scrollHorizontally="true"
+            android:textColor="?text_color_grey"
+            android:textIsSelectable="false"
+            android:textSize="12sp"
+            tools:text="terrain, difficulty and others" />
+
+    </LinearLayout>
 
     <!-- real text based direction and distance -->
 
