--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -5,10 +5,12 @@
 <h1>Nightly build:</h1>
 <h4>Android 11 notice:</h4>
 Android 11 enforces a new way for storing data, which c:geo does not support yet. If you switch your system to Android 11, c:geo will not be able to access part of its data. This will most likely disable storing offline maps, importing/exporting data as well as backing up/restoring c:geo\'s database. Other effects may occur. We recommend to not upgrade to Android 11 for the time being.
+
 <h4>Map:</h4>
 <ul>
 <li>.</li>
 </ul>
+
 <h4>Cache details:</h4>
 <ul>
 <li>New: Allow negative bearing angles for waypoint projection</li>
@@ -16,10 +18,12 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>Fix: Offline log remembers selected image</li>
 <li>New: Offline logging now supports adding multiple images</li>
 </ul>
+
 <h4>Cache lists:</h4>
 <ul>
-  <li>.</li>
+  <li>Change: Allow cache title to wrap to multi-line</li>
 </ul>
+
 <h4>Other:</h4>
 <ul>
 <li>New: Offer c:geo for navigation intents (eg.: from Lab Adventure app)</li>
